# smtp-client-rust

crates/async_stream/: Cargo.toml
crates/async_stream/src/: lib.rs
crates/console_client/: Cargo.toml
crates/console_client/src/: main.rs
crates/error_handler/: Cargo.toml
crates/error_handler/src/: lib.rs
crates/smtp_session/: Cargo.toml
crates/smtp_session/src/: base64.rs  lib.rs  message.rs
crates/smtp_session/src/smtp_response/: mod.rs
crates/ui_client/: Cargo.toml
crates/ui_client/src/: main.rs  screen.rs
crates/ui_client/src/screen/: home.rs  login.rs
